carousel for mainPage ready. Fix chatUser textarea on mobile3

--- a/src/css/lessStyle.less
+++ b/src/css/lessStyle.less
@@ -32,6 +32,7 @@
     }
     .profilePhoto {
         margin-top: 20px;
+        margin-left: 15px;
         height: 150px;
         width: 150px;
         
@@ -207,6 +208,10 @@
 
 ///////////////////////// 
 @media @extraSmall {
+    .mainRouter{
+    padding-left: 0px !important;
+    padding-right: 0px !important;
+}
       .rightChat{
     margin-left: 30px;
 }
